--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Siddharth</span><br>
+                    Hi, I'm <span>Atul Anand</span><br>
                     A Web Developer.
                 </h1>
                 <p>
@@ -46,7 +46,7 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I Siddharth, a passionate BTech CSE student, excels in both academia and professional realms. My journey is marked by triumphs in hackathons and prestigious competitions, complemented by a diverse array of certifications in cutting-edge technologies. Immersive internships as a frontend developer further refine my skills, fostering innovation and propelling towards excellence in the dynamic landscape of computer science.
+                        I Atul Anand, a passionate BTech CSE student, excels in both academia and professional realms. My journey is marked by triumphs in hackathons and prestigious competitions, complemented by a diverse array of certifications in cutting-edge technologies. Immersive internships as a frontend developer further refine my skills, fostering innovation and propelling towards excellence in the dynamic landscape of computer science.
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -97,7 +97,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">css3</p>
                         <div class="progress-con">
-                            <p class="prog-text">95%</p>
+                            <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
@@ -112,57 +112,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="progress-bar">
-                        <p class="prog-title">ReactJS</p>
-                        <div class="progress-con">
-                            <p class="prog-text">75%</p>
-                            <div class="progress">
-                                <span class="react"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="progress-bar">
-                        <p class="prog-title">NodeJS</p>
-                        <div class="progress-con">
-                            <p class="prog-text">87%</p>
-                            <div class="progress">
-                                <span class="node"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="progress-bar">
-                        <p class="prog-title">Python</p>
-                        <div class="progress-con">
-                            <p class="prog-text">80%</p>
-                            <div class="progress">
-                                <span class="python"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h4 class="stat-title">My Timeline</h4>
+             <h4 class="stat-title">My Timeline</h4>
             <div class="timeline">
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2023 - 2024</p>
-                    <h5>Internship <span> - Startup</span></h5>
-                    <p>
-                        During my frontend developer internship at a startup, I fostered a strong relationship with the CEO. Our collaboration was marked by mutual respect and effective communication, driving successful project outcomes.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2024</p>
-                    <h5>Internship<span> - Codsoft</span></h5>
-                    <p>
-                        During my frontend developer internship, I spearheaded the creation of five diverse projects to showcase my expertise. Each project highlighted my proficiency in web development and design principles.
-                    </p>
-                </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
@@ -188,7 +139,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2020 - 2022</p>
-                    <h5>Secondary<span> - Sant Atulanand Convent School, Varanasi.</span></h5>
+                    <h5>Secondary<span> - Bijulia Inter Collage ,Bokara.</span></h5>
                     <p>
                         My secondary journey was a stimulating exploration encompassing physics, chemistry, mathematics, and computer science. These subjects ignited my curiosity and laid the foundation for my academic pursuits.
                     </p>
@@ -198,7 +149,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2008 - 2020</p>
-                    <h5>KG - High School<span> - Central Public School , Ghazipur.</span></h5>
+                    <h5>KG - High School<span> -Tata D.A.V. School, Dhanbad.</span></h5>
                     <p>
                         My journey from kindergarten to high school was a formative experience filled with curiosity, growth, and lifelong friendships. It laid the groundwork for my academic and personal development.
                     </p>
@@ -209,144 +160,6 @@
         <section class="container" id="portfolio">
             <div class="main-title">
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
-            </div>
-            <p class="port-text">
-                Here is some of my work that I've done in various programming languages.
-            </p>
-            <div class="portfolios">
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port1.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="https://sidd-tiwari.github.io/Landingpage.github.io/" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port2.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="https://sidd-tiwari.github.io/Calculator.github.io/" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port3.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="https://sidd-tiwari.github.io/tn_porfolio.github.io/" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port4.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="https://sidd-tiwari.github.io/martial-art/" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port5.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="https://sidd-tiwari.github.io/blog_page.github.in/" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port2.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="https://sidd-tiwari.github.io/PORTFOLIO/" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="image">
-                        <img src="img/port7.jpg" alt="">
-                    </div>
-                    <div class="hover-items">
-                        <h3>Project Source</h3>
-                        <div class="icons">
-                            <a href="https://github.com/Sidd-Tiwari/Multi-level-marketing.github.io" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
         <section class="container" id="blogs">
@@ -458,7 +271,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: tiwarisid022018@gmail.com</span>
+                                    <span>: atulanand310@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -476,7 +289,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: (+91) 99561 26406</span>
+                                    <span>: (+91)9931231959</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -491,17 +304,14 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="https://www.instagram.com/st_001s/" target="_blank">
+                                <a href="https://www.instagram.com/atul.singh.69/" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="https://www.linkedin.com/in/siddharth-tiwari-394451271/" target="_blank">
+                                <a href="https:www.linkedin.com/in/atul-anand-998739275/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
-                                <a href="https://github.com/Sidd-Tiwari" target="_blank">
+                                <a href="https:https://github.com/atulanand69" target="_blank">
                                     <i class="fab fa-github"></i>
-                                </a>
-                                <a href="https://www.youtube.com/channel/UCw95WVII4bg7plqMqjGjHXw" target="_blank">
-                                    <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
                         </div>
